force-app/main/default/objects/Recommendation__c/Recommendation__c.object-meta.xml
<CustomObject>
    <label>Health Recommendation</label>
    <nameField>
        <displayFormat>REC-{0000}</displayFormat>
        <label>Recommendation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>