force-app/main/default/objects/Recommendation__c/fields/Action_Data_JSON__c.field-meta.xml
<CustomField>
    <fullName>Action_Data_JSON__c</fullName>
    <description>Serialized parameters or record IDs for the associated action.</description>
    <label>Action Data (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>