force-app/main/default/objects/Recommendation__c/fields/Action_Key__c.field-meta.xml
<CustomField>
    <fullName>Action_Key__c</fullName>
    <description>The key matching an Action_Definition__mdt record or a semicolon-separated list of keys.</description>
    <label>Action Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>