force-app/main/default/objects/Recommendation__c/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <description>Self-reported confidence score from the AI model.</description>
    <label>AI Confidence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>