force-app/main/default/objects/Recommendation__c/fields/AI_Generated__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this recommendation was generated by the AI Engine.</description>
    <label>AI Generated</label>
    <type>Checkbox</type>
</CustomField>