force-app/main/default/objects/Recommendation__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Confidence level of the detection logic (0-100).</description>
    <label>Confidence Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>