force-app/main/default/objects/Recommendation__c/fields/Connected_Org__c.field-meta.xml
<CustomField>
    <fullName>Connected_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Org</label>
    <referenceTo>Connected_Org__c</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>