force-app/main/default/objects/Recommendation__c/fields/Data_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Data_Confidence__c</fullName>
    <description>Confidence score based on the completeness and freshness of the source data.</description>
    <label>Data Confidence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>