force-app/main/default/objects/Recommendation__c/fields/Days_To_Risk__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Risk__c</fullName>
    <description>Predicted number of days until a limit or critical threshold is reached.</description>
    <label>Days to Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>