force-app/main/default/objects/Recommendation__c/fields/Forecast_Value__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Value__c</fullName>
    <description>Predicted future value of the metric.</description>
    <label>Forecast Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>