force-app/main/default/objects/Recommendation__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>The potential impact of the risk or recommendation.</description>
    <label>Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>