force-app/main/default/objects/Recommendation__c/fields/Metadata_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Confidence__c</fullName>
    <label>Metadata Confidence (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>