force-app/main/default/objects/Recommendation__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>The expected benefit or result if the recommendation is followed.</description>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>