force-app/main/default/objects/Recommendation__c/fields/Pattern_Score__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Score__c</fullName>
    <description>Score based on the strength of the identified anomaly or trend pattern.</description>
    <label>Pattern Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>