force-app/main/default/objects/Recommendation__c/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <description>Calculated priority (0-100) based on impact and urgency.</description>
    <label>Priority Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>