force-app/main/default/objects/Recommendation__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>The reason why this recommendation was generated (AI logic).</description>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>