force-app/main/default/objects/Recommendation__c/fields/Simplified_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Simplified_Reasoning__c</fullName>
    <label>Simplified Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>