force-app/main/default/objects/Recommendation__c/fields/Suggested_Action__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Action__c</fullName>
    <description>Actionable steps to resolve the identified risk.</description>
    <label>Suggested Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>