force-app/main/default/objects/Recommendation__c/fields/Supporting_Data_JSON__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Data_JSON__c</fullName>
    <description>JSON representation of the supporting data (proof) for this AI insight.</description>
    <label>Supporting Data (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>