force-app/main/default/objects/Recommendation__c/fields/Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Count__c</fullName>
    <description>Total number of records or entities impacted by this insight.</description>
    <label>Total Impact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>