force-app/main/default/objects/Recommendation__c/fields/Trust_Score__c.field-meta.xml
<CustomField>
    <fullName>Trust_Score__c</fullName>
    <description>AI Confidence percentage for this recommendation.</description>
    <inlineHelpText>Confidence score (0-100%) assigned by the AI engine.</inlineHelpText>
    <label>Trust Score (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>