force-app/main/default/objects/Recommendation__c/fields/What_If__c.field-meta.xml
<CustomField>
    <fullName>What_If__c</fullName>
    <description>AI-generated prediction of what happens if this recommendation is not followed.</description>
    <label>What If Scenario</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>